creation des cartes pour l'affichage des idées

--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
                 <img src="./images/boite.jpg" class="img-fluid" alt="Image placeholder">
             </div>
         </div>
+        <hr><br>
+        <h2>Liste des idées</h2>
         <div class="cards-section" id="cards-section">
+           
             <!-- Les cartes seront chargées ici dynamiquement -->
         </div>
     </div>
