--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                     <div class="form-group">
                         <label for="libelle">Libellé</label>
                         <input type="text" class="form-control" id="libelle" placeholder="Entrez le libellé">
+                        <div class="error"></div>
                     </div>
                     <div class="form-group">
                         <label for="categorie">Catégorie</label>
@@ -26,11 +27,13 @@
                             <option value="Education">Éducation</option>
                             <option value="Autre">Autre</option>
                         </select>
+                        <div class="error"></div>
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="description">Description</label>
                     <textarea class="form-control" id="description" rows="3" placeholder="Entrez votre message"></textarea>
+                    <div class="error"></div>
                 </div>
                 <button type="submit" class="btn " id="submit-button">Ajouter</button>
             </form>
