ajout des icon pour approuvé et désapprouvé

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <select class="form-control" id="categorie">
                             <option value="Politique">Politique</option>
                             <option value="Sport">Sport</option>
-                            <option value="Santé">Santé</option>
+                            <option value="Sante">Santé</option>
                             <option value="Education">Éducation</option>
                             <option value="Autre">Autre</option>
                         </select>
