--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
                 </div>
                 <div class="form-group">
                     <label for="description">Description</label>
-                    <textarea class="form-control" id="description" rows="3" placeholder="Entrez votre message"></textarea>
+                    <textarea class="form-control" id="description" rows="3" placeholder="Entrez votre message" maxlength="255"></textarea>
                     <div class="error"></div>
+                    <div id="char-counter" class="char-counter">0/255</div>
                 </div>
                 <button type="submit" class="btn " id="submit-button">Ajouter</button>
             </form>
