--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
         // Initialize Firebase
         const app = initializeApp(firebaseConfig);
-        import { getDatabase, ref, set, push, onValue, remove }
+        import { getDatabase, ref, set, push, onValue, remove, update }
         from "https://www.gstatic.com/firebasejs/10.12.3/firebase-database.js";
 
         const db = getDatabase(app);
@@ -249,88 +249,106 @@ description.addEventListener('input', e => {
     counter.innerText = `${currentLength}/${maxLength}`;
 });
 
-        // Fonction pour afficher les idées
-        const affichageIdee = (idees) => {
-            cards_section.innerHTML = ''; // Efface le contenu précédent
+       // Fonction pour afficher les idées
+const affichageIdee = (idees) => {
+    cards_section.innerHTML = ''; // Efface le contenu précédent
 
-            idees.forEach((idee, index) => {
-                // Trouver l'objet catégorie correspondant dans validCategories
-                const categorieObj = validCategories.find(cat => cat.name === idee.categorie);
+    idees.forEach((idee, index) => {
+        // Trouver l'objet catégorie correspondant dans validCategories
+        const categorieObj = validCategories.find(cat => cat.name === idee.categorie);
 
-                if (!categorieObj) {
-                    console.error(`La catégorie "${idee.categorie}" n'a pas d'image associée.`);
-                    return;
-                }
-
-                // Création d'une carte pour chaque idée
-                const card = document.createElement('div');
-                card.classList.add('card');
-                
-                // Définir les classes et icônes selon l'état d'approbation
-                let cardBorderClass = '';
-                if (idee.approved === true) {
-                    cardBorderClass = 'border-success';
-                } else if (idee.approved === false) {
-                    cardBorderClass = 'border-danger';
-                }
-
-                card.innerHTML = `
-                    <div class="card-body ${cardBorderClass}">
-                        <img src="${categorieObj.image}" alt="${idee.categorie}" class="category-image" />
-                        <h5 class="card-title">${idee.libelle}</h5>
-                        <h6 class="card-subtitle mb-2 text-muted"> Catégorie: ${idee.categorie}</h6>
-                        <p class="card-text mb-5">${idee.description}</p>
-                        <div class="approval-icons">
-                            ${idee.approved !== true ? `<i class="fas fa-thumbs-up approve-icon" data-index="${index}"></i>` : ''}
-                            ${idee.approved !== false ? `<i class="fas fa-thumbs-down disapprove-icon" data-index="${index}"></i>` : ''}
-                            <button class="btn btn-danger btn-sm delete-btn" data-key="${idee.key}" data-index="${index}">
-                                <i class="fas fa-trash-alt"></i>
-                            </button>
-                        </div>
-                    </div>
-                `;
-
-                // Ajout d'un gestionnaire d'événements pour le bouton de suppression
-                const deleteButton = card.querySelector('.delete-btn');
-                deleteButton.addEventListener('click', () => {
-                    const confirmation = confirm("Êtes-vous sûr de vouloir supprimer cette idée ?");
-                    if (confirmation) {
-                        const ideeRef = ref(db, `idees/${idee.key}`);
-                        remove(ideeRef)
-                            .then(() => {
-                                idees.splice(index, 1);
-                                affichageIdee(idees);
-                                displayMessage('L\'idée a été supprimée avec succès.', true);
-                            })
-                            .catch((error) => {
-                                console.error('Erreur lors de la suppression de l\'idée dans Firebase:', error);
-                                displayMessage('Erreur lors de la suppression de l\'idée.', false);
-                            });
-                    }
-                });
-
-                // Ajout d'événements pour l'approbation et la désapprobation
-                const approveIconElement = card.querySelector('.approve-icon');
-                if (approveIconElement) {
-                    approveIconElement.addEventListener('click', () => {
-                        idees[index].approved = true; // Approuver l'idée
-                        affichageIdee(idees); // Réafficher les idées mises à jour
-                        // Mettez à jour l'idée dans Firebase ici
-                    });
-                }
-
-                const disapproveIconElement = card.querySelector('.disapprove-icon');
-                if (disapproveIconElement) {
-                    disapproveIconElement.addEventListener('click', () => {
-                        idees[index].approved = false; // Désapprouver l'idée
-                        affichageIdee(idees); // Réafficher les idées mises à jour
-                        // Mettez à jour l'idée dans Firebase ici
-                    });
-                }
-
-                cards_section.appendChild(card);
-            });
+        if (!categorieObj) {
+            console.error(`La catégorie "${idee.categorie}" n'a pas d'image associée.`);
+            return;
         }
+
+        // Création d'une carte pour chaque idée
+        const card = document.createElement('div');
+        card.classList.add('card');
+
+        // Définir les classes et icônes selon l'état d'approbation
+        let cardBorderClass = '';
+        if (idee.approved === true) {
+            cardBorderClass = 'border-success';
+        } else if (idee.approved === false) {
+            cardBorderClass = 'border-danger';
+        }
+
+        card.innerHTML = `
+            <div class="card-body ${cardBorderClass}">
+                <img src="${categorieObj.image}" alt="${idee.categorie}" class="category-image" />
+                <h5 class="card-title">${idee.libelle}</h5>
+                <h6 class="card-subtitle mb-2 text-muted"> Catégorie: ${idee.categorie}</h6>
+                <p class="card-text mb-5">${idee.description}</p>
+                <div class="approval-icons">
+                    ${idee.approved !== true ? `<i class="fas fa-thumbs-up approve-icon" data-index="${index}"></i>` : ''}
+                    ${idee.approved !== false ? `<i class="fas fa-thumbs-down disapprove-icon" data-index="${index}"></i>` : ''}
+                    <button class="btn btn-danger btn-sm delete-btn" data-key="${idee.key}" data-index="${index}">
+                        <i class="fas fa-trash-alt"></i>
+                    </button>
+                </div>
+            </div>
+        `;
+
+        // Ajout d'un gestionnaire d'événements pour le bouton de suppression
+        const deleteButton = card.querySelector('.delete-btn');
+        deleteButton.addEventListener('click', () => {
+            const confirmation = confirm("Êtes-vous sûr de vouloir supprimer cette idée ?");
+            if (confirmation) {
+                const ideeRef = ref(db, `idees/${idee.key}`);
+                remove(ideeRef)
+                    .then(() => {
+                        idees.splice(index, 1);
+                        affichageIdee(idees);
+                        displayMessage('L\'idée a été supprimée avec succès.', true);
+                    })
+                    .catch((error) => {
+                        console.error('Erreur lors de la suppression de l\'idée dans Firebase:', error);
+                        displayMessage('Erreur lors de la suppression de l\'idée.', false);
+                    });
+            }
+        });
+
+        // Ajout d'événements pour l'approbation et la désapprobation
+       // Ajout d'événements pour l'approbation et la désapprobation
+const approveIconElement = card.querySelector('.approve-icon');
+if (approveIconElement) {
+    approveIconElement.addEventListener('click', () => {
+        idees[index].approved = true; // Approuver l'idée
+        updateIdees(idees[index]); // Exemple d'appel de fonction updateIdees pour mettre à jour dans Firebase
+        affichageIdee(idees); // Réafficher les idées mises à jour
+    });
+}
+
+const disapproveIconElement = card.querySelector('.disapprove-icon');
+if (disapproveIconElement) {
+    disapproveIconElement.addEventListener('click', () => {
+        idees[index].approved = false; // Désapprouver l'idée
+        updateIdees(idees[index]); // Exemple d'appel de fonction updateIdees pour mettre à jour dans Firebase
+        affichageIdee(idees); // Réafficher les idées mises à jour
+    });
+}
+
+// Exemple de fonction updateIdees pour mettre à jour dans Firebase
+// Exemple de fonction updateIdees pour mettre à jour dans Firebase
+function updateIdees(idee) {
+    const ideeRef = ref(db, `idees/${idee.key}`);
+    update(ideeRef, {
+        approved: idee.approved
+    })
+    .then(() => {
+        console.log('Idee mise à jour avec succès dans Firebase');
+    })
+    .catch((error) => {
+        console.error('Erreur lors de la mise à jour de l\'idée dans Firebase:', error);
+    });
+}
+
+
+        cards_section.appendChild(card);
+    });
+};
+
     </script>
 </body>
 </html>
